refactor: order swagger

--- a/order/swagger/order.yaml
+++ b/order/swagger/order.yaml
@@ -1,7 +1,8 @@
 openapi: 3.0.1
+
 info:
-  description: Semana 5 - Treinamento da PagoNxt com a Alura sobre HTTP e Swagger.
-  version: 0.1.0
+  description: Treinamento da PagoNxt (Empresa Santander) com a Alura - Microserviço de Ecommerce, documentação dos pedidos
+  version: 0.2.0
   title: Ecomm Project - Orders API
   termsOfService: http://swagger.io/terms/
   contact:
@@ -10,22 +11,29 @@ info:
   license:
     name: Licença
     url: http://www.alura.com
+
+security:
+  - JWTAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 components:
   schemas:
     order-insert:
       type: object
       properties:
-        name:
+        user_id:
           type: string
         delivery_address:
           type: object
           properties: 
             cep:
-              type: integer
+              type: string
             street:
               type: string
             number:
-              type: integer
+              type: string
             complement:
               type: string
         order:
@@ -33,23 +41,24 @@ components:
           items:
             type: object
             properties: 
-              product_name:
+              product_id:
                 type: string
-              product_price:
-                type: number
-                fortmat: double
               product_qty:
                 type: integer
               discount:
-                type: number
-                format: double
+                type: integer
     order-response:
       type: object
       properties:
         _id:
           type: string
-        name:
-          type: string
+        user_info:
+          type: object
+          properties: 
+            name:
+              type: string
+            cfp:
+              type: string          
         delivery_address:
           type: object
           properties: 
@@ -69,27 +78,27 @@ components:
               product_name:
                 type: string
               product_price:
-                type: number
-                fortmat: double
+                type: integer
               product_qty:
                 type: integer
               discount:
-                type: number
+                type: integer
         total_price:
-          type: number
-          format: double
+          type: integer
         sale_date:
           type: string
           format: date
+
 servers:
 - url: 
   description: Order Server - XD
+
 paths:
-  /orders:
+  /sale:
     get:
       tags:
-      - Order
-      summary: Search for all available Orders.
+      - Sale
+      summary: Search for all available Sales.
       responses:
         200:
           description: Success
@@ -99,6 +108,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/order-response'
+        401:
+          description: Unathorized
+          content:
+            aplication/json:
+              example: Token not found || Expired or invalid token
         404:
           description: Not Found
           content:
@@ -106,37 +120,10 @@ paths:
               example: Not Found
         500:
           description: Internal Server Error
-  /orders/{id}:
-    parameters: 
-    - in: path
-      name: id
-      description: Unique identifier
-      required: true
-      example: 63caa785ae701b25441ff0be
-      schema: 
-        type: string
-    get:
-      tags:
-      - Order
-      summary: Search for an especific order by ID.
-      responses: 
-        200:
-          description: Success
-          content:
-            aplication/json:
-              schema:
-                $ref: '#/components/schemas/order-response'
-        404:
-          description: Not Found
-          content: 
-            aplication/json:
-              example: Not Found
-        500:
-          description: Internal Server Error
-  /admin/order:
+
     post:
       tags:
-      - Order
+      - Sale
       summary: Add a new order to the list. You need to be logged as an adminstrator to use this.
       requestBody:
         required: true
@@ -155,10 +142,16 @@ paths:
           description: Unauthorized
           content: 
             aplication/json:
-              example: User unathorized, please check your credentials
+              example: Token not found || Expired or invalid token
+        422:
+          description: Unprocessable Entity
+          content:
+            application/json:
+              example: \xxx\ is required || \xxx\ must be 'typeof'
         500:
           description: Internal Server Error
-  /admin/orders/{id}:
+
+  /sale/{id}:
     parameters: 
     - in: path
       name: id
@@ -167,39 +160,33 @@ paths:
       example: 63caa785ae701b25441ff0be
       schema: 
         type: string
-    put:
+    get:
       tags:
-      - Order
-      summary: Change all order information by ID. You need to be logged as an adminstrator to use this.
-      requestBody:
-        required: true
-        content:
-          aplication/json:
-            schema:
-              $ref: '#/components/schemas/order-insert'
+      - Sale
+      summary: Search for an especific order by ID.
       responses: 
-        202:
-          description: Accepted
-          content: 
-            aplicativo/json:
-              schema: 
+        200:
+          description: Success
+          content:
+            aplication/json:
+              schema:
                 $ref: '#/components/schemas/order-response'
         401:
           description: Unauthorized
           content: 
             aplication/json:
-              example: User unathorized, please check your credentials
+              example: Token not found || Expired or invalid token
         404:
           description: Not Found
           content: 
             aplication/json:
-              schema: 
-                example: Order Not Found
+              example: Not Found
         500:
           description: Internal Server Error
+
     patch:
       tags:
-      - Order
+      - Sale
       summary: Change a order information by ID. You need to be logged as an adminstrator to use this.
       requestBody:
         required: true
@@ -208,17 +195,13 @@ paths:
             schema:
               type: object
       responses: 
-        202:
-          description: Accepted
-          content:
-            aplication/json:
-              schema: 
-                $ref: '#/components/schemas/order-response'
+        204:
+          description: No Content
         401:
           description: Unauthorized
           content: 
             aplication/json:
-              example: User unathorized, please check your credentials
+              example: Token not found || Expired or invalid token
         404:
           description: Not Found
           content: 
@@ -226,21 +209,19 @@ paths:
               example: Order Not Found
         500:
           description: Internal Server Error
+
     delete:
       tags:
-      - Order
+      - Sale
       summary: Delete a order by ID. You need to be logged as an adminstrator to use this.
       responses: 
-        200:
-          description: Success
-          content:
-            aplication/json:
-              example: Order deleted
+        204:
+          description: No Content
         401:
           description: Unauthorized
           content: 
             aplication/json:
-              example: User unathorized, please check your credentials
+              example: Token not found || Expired or invalid token
         404:
           description: Not Found
           content: 
